[project]
name = "llm-test-lab"
version = "0.1.0"
description = "OpenAPI ve curl girdilerinden çoklu LLM API test senaryosu üreten laboratuvar."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "openai>=1.0.0,<2.0.0",
  "google-genai>=0.3.0,<2.0.0",
  "anthropic>=0.40.0,<1.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "requests>=2.31.0,<3.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "flask>=3.0.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<10.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py39"
